# edgeflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  commitlint.config.js  deny.toml  justfile  pyproject.toml  release-please-config.json
.github/actions/build-wasm-transform/: action.yml
.github/workflows/: _wheel-build.yml  ci.yml  docs-rs.yml  docs.yml  e2e-compose.yml  e2e-k3d.yml  e2e.yml  k3d-e2e.yml  publish-cargo.yml  publish-docker.yml  publish-pypi.yml  release-please.yml  wheel-smoke.yml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: api.rs  main.rs
apps/cli/src/cmd/: deploy.rs  deployments.rs  experiments.rs  mod.rs  models.rs  nodes.rs  runs.rs  targets.rs
apps/inference/: Cargo.toml
apps/inference/benches/: pipeline.rs
apps/inference/src/: client.rs  deployment.rs  inputs.rs  lib.rs  main.rs  mqtt.rs  pipeline.rs  server.rs  tensor.rs  wasm.rs
apps/inference/src/backend/: mod.rs  ort.rs  tract.rs
apps/inference/tests/: pipeline.rs
apps/inference/tests/fixtures/: iris.onnx  large.onnx
apps/sdk/: pyproject.toml
apps/sdk/edgeflow/: __init__.py  _internal.py  _types.py  artifacts.py  cli.py  codec.py  deploy.py  deployments.py  experiments.py  layers.py  models.py  nodes.py  pipeline.py  runs.py  targets.py  transforms.py
apps/sdk/edgeflow/wasm/: standard_pipeline.wasm
apps/sdk/tests/: test_codec.py
apps/server/: Cargo.toml
apps/server/src/: cors.rs  k8s.rs  main.rs  mqtt.rs  state.rs  target_client.rs
apps/server/src/api/: artifacts.rs  deployments.rs  experiments.rs  metrics.rs  mod.rs  model_registry.rs  runs.rs  stats.rs
apps/ui/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/ui/src/: app.html
apps/ui/src/lib/: api.ts  stores.ts  utils.ts
apps/ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/ui/static/: site.webmanifest
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: wire_contract.rs
crates/common/: Cargo.toml
crates/common/src/: backoff.rs  lib.rs  logging.rs  shutdown.rs  tensor.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: deployment.rs  lib.rs  model_registry.rs  run.rs
crates/edgeflow-core/: Cargo.toml
crates/edgeflow-core/src/: artifact.rs  deployment.rs  experiment.rs  lib.rs  metric.rs  run.rs
crates/edgeflow-inference/: Cargo.toml
crates/edgeflow-inference/src/: client.rs  main.rs  pipeline.rs  server.rs  tensor.rs  wasm.rs
crates/edgeflow-inference/src/backend/: mod.rs  ort.rs
crates/edgeflow-server/: Cargo.toml
crates/edgeflow-server/src/: k8s.rs  main.rs  state.rs
crates/edgeflow-server/src/api/: artifacts.rs  deployments.rs  metrics.rs  mod.rs  runs.rs
crates/edgeflow-store/: Cargo.toml
crates/edgeflow-store/src/: lib.rs
crates/edgeflow-store/src/sqlite/: mod.rs
crates/edgeflow-transforms/src/: layers.rs  python_impl.rs  wasm_impl.rs
crates/k8s/: Cargo.toml
crates/k8s/src/: client.rs  deployments.rs  lib.rs  naming.rs  nodes.rs  pods.rs  settings.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: compose.rs  k8s.rs  lib.rs
crates/store/: Cargo.toml
crates/store/migrations/: 001_initial.sql  003_deployment_lifecycle.sql  005_target_node.sql  006_target_heartbeat.sql  007_target_model.sql  008_model_registry.sql  009_deployment_model_version.sql  010_sessions.sql
crates/store/src/: lib.rs
crates/store/src/sqlite/: artifacts.rs  deployments.rs  experiments.rs  metrics.rs  mod.rs  models.rs  runs.rs  targets.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: json_format.rs  lib.rs
crates/transforms/: Cargo.toml
crates/transforms/src/: layers.rs  lib.rs  python_client.rs  python_impl.rs  wasm_impl.rs
crates/transforms/wit/: transform.wit
deploy/: Dockerfile.inference  Dockerfile.server  dev.sh  docker-bake.hcl  docker-compose.yaml  inference.Dockerfile  k3d-cluster.yaml  quickstart.yaml  server.Dockerfile
deploy/manifests/: inference.yaml  observability.yaml  server.yaml
deploy/observability/: .env.example  docker-compose.yaml
deploy/observability/otelcol/: config.yaml
deploy/observability/prometheus/: prometheus.yaml
docs/book/: conf.py  index.rst  pyproject.toml
docs/book/_static/: custom.css
docs/book/adr/: 001-system-architecture.rst  002-wasm-inference-transforms.rst
docs/book/diagrams/: 001-communication.d2  001-lineage.d2  002-hotswap.d2  002-inference-flow.d2
docs/book/tutorials/: 01-quickstart-iris.rst  02-iris-with-preprocessing.rst  03-adult-income.rst  05-k3d-yolo.rst
examples/01-quickstart-iris/: pyproject.toml  train.py
examples/02-iris-with-preprocessing/: pyproject.toml  train.py
examples/03-adult-income/: pyproject.toml  train.py
examples/05-k3d-yolo/: deploy.py  pyproject.toml
migrations/: 001_initial.sql  002_deployments.sql  004_target_resources.sql
python/: pyproject.toml
python/edgeflow/: artifacts.py  cli.py  codec.py  models.py
python/edgeflow/wasm/: standard_pipeline.wasm
scripts/: deploy_yolov8.py  gen_bench_model.py  pyproject.toml  test_mlflow_compat.py  train_adult_income.py  train_iris.py  train_iris_normalized.py  train_iris_rf.py  transforms.py
scripts/dev/: apply-inference.sh  apply-observability.sh  apply-server.sh  banner.sh  build-images.sh  check-doc-paths.sh  cluster-create.sh  cluster-delete.sh  next-steps.sh  preflight.sh  pull-vendor-images.sh  push-images.sh
scripts/edgeflow/: models.py  transforms.py
scripts/payloads/: adult.json
scripts/test/: gen_bench_model.py  test_mlflow_compat.py
scripts/test-load/: .gitignore  bench.sh  locustfile.py  locustfile_adult.py  make_payloads.py  pyproject.toml
tests/e2e/: conftest.py  pyproject.toml  test_01_quickstart_iris.py  test_02_iris_with_preprocessing.py  test_03_adult_income.py  test_parity_readonly.py
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: api.ts
ui/src/routes/: +layout.svelte  +page.svelte
wit/: transform.wit
(+31 files in other folders)
