[workspace]
members = [
    "crates/config",
    "crates/telemetry",
    "crates/core",
    "crates/store",
    "crates/common",
    "crates/k8s",
    "crates/orchestrator",
    "crates/client",
    "apps/server",
    "apps/inference",
    "apps/cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Jordan Delbar <jordandelbar@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/jordandelbar/edgeflow"
homepage = "https://github.com/jordandelbar/edgeflow"
rust-version = "1.88"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
opentelemetry          = "0.31"
opentelemetry-otlp     = { version = "0.31", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk      = { version = "0.31", features = ["metrics", "rt-tokio"] }
tracing-opentelemetry  = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
rumqttc = { version = "0.25", default-features = false }
rumqttd = "0.20"
