[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "edgeflow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "componentize-py>=0.13",
    "onnx>=1.16",
    "skl2onnx>=1.17",
]

[tool.maturin]
python-source = "."
module-name = "edgeflow._lib"
manifest-path = "../crates/edgeflow-transforms/Cargo.toml"
features = ["python"]
