[project]
name = "edgeflow-scripts"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "edgeflow",
    "mlflow>=3.10.1",
    "numpy>=1.26",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "ultralytics>=8.2",
]

[tool.uv.sources]
edgeflow = { path = "../apps/sdk", editable = true }
