[package]
name = "edgeflow-cli"
version = "0.1.0"
edition = "2021"
description = "edgeflow command-line interface"
license = "Apache-2.0"
repository = "https://github.com/edgeflow-rs/edgeflow"
keywords = ["ml", "inference", "edge", "onnx"]
categories = ["command-line-utilities"]

[[bin]]
name = "edgeflow"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive", "env"] }
reqwest     = { version = "0.13", features = ["blocking", "json"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
comfy-table = "7"
chrono      = { workspace = true }
