[package]
name = "edgeflow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Command-line interface for the edgeflow inference platform"
readme = "README.md"
keywords = ["ml", "mlops", "inference", "edge", "cli"]
categories = ["command-line-utilities", "science"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "edgeflow"
path = "src/main.rs"

[dependencies]
edgeflow-client = { path = "../../crates/client" }
clap        = { version = "4", features = ["derive", "env"] }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
comfy-table = "7"
chrono      = { workspace = true }
