[package]
name = "edgeflow-inference"
version = "0.1.0"
edition = "2021"

[lib]
name = "edgeflow_inference"
path = "src/lib.rs"

[[bin]]
name = "edgeflow-inference"
path = "src/main.rs"

[[bench]]
name = "pipeline"
harness = false

[features]
default = ["ort-backend"]
ort-backend = ["dep:ort"]
tract-backend = ["dep:tract-onnx"]

[dependencies]
edgeflow-common = { path = "../../crates/common" }
anyhow = "1"
bytes = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
tract-onnx = { version = "0.22", optional = true }
reqwest = { version = "0.13", features = ["json"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wasmtime = { version = "43", features = ["component-model", "anyhow"] }
wasmtime-wasi = "43"
rumqttc = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
