[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "edgeflow"
version = "0.0.1.dev0"
requires-python = ">=3.12"
dependencies = [
    "componentize-py>=0.13",
    "onnx>=1.16",
    "skl2onnx>=1.17",
    "requests>=2.31",
]

[tool.maturin]
python-source = "."
module-name = "edgeflow._lib"
manifest-path = "../../crates/transforms/Cargo.toml"
features = ["python"]
