[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "edgeflow"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "componentize-py>=0.13",
    "onnx>=1.16",
    "skl2onnx>=1.17",
]

[project.optional-dependencies]
xgboost = ["onnxmltools>=1.12"]
lightgbm = ["onnxmltools>=1.12"]

[tool.maturin]
python-source = "."
module-name = "edgeflow._lib"
manifest-path = "../../crates/transforms/Cargo.toml"
features = ["python"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "hypothesis>=6.0",
]
