[package]
name = "edgeflow-server"
version = "0.1.0"
edition = "2021"

[dependencies]
edgeflow-core = { path = "../../crates/core" }
edgeflow-store = { path = "../../crates/store" }
edgeflow-common = { path = "../../crates/common" }
edgeflow-k8s = { path = "../../crates/k8s" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { workspace = true, features = ["serde"] }
rumqttd = { workspace = true }
rumqttc = { workspace = true }
toml = "0.8"
