[package]
name = "edgeflow-server"
version = "0.1.0"
edition = "2021"

[dependencies]
edgeflow-core = { path = "../../crates/core" }
edgeflow-store = { path = "../../crates/store" }
edgeflow-common = { path = "../../crates/common" }
edgeflow-config    = { path = "../../crates/config" }
edgeflow-telemetry = { path = "../../crates/telemetry" }
edgeflow-k8s = { path = "../../crates/k8s" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.13", features = ["json"], default-features = false }
chrono = { workspace = true, features = ["serde"] }
rumqttd = { workspace = true }
rumqttc = { workspace = true }
toml = "1.1"
