[package]
name = "edgeflow-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
edgeflow-core = { path = "../../crates/core" }
edgeflow-store = { path = "../../crates/store" }
edgeflow-common = { path = "../../crates/common" }
edgeflow-config    = { path = "../../crates/config" }
edgeflow-telemetry = { path = "../../crates/telemetry" }
edgeflow-k8s = { path = "../../crates/k8s" }
edgeflow-orchestrator = { path = "../../crates/orchestrator" }
axum = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "net", "time", "macros"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.13", features = ["json"], default-features = false }
chrono = { workspace = true, features = ["serde"] }
rumqttd = { workspace = true }
rumqttc = { workspace = true }
toml = "1.1"
