[package]
name = "edgeflow-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Sync HTTP client for the edgeflow REST API. Shared by edgeflow-cli and the Python SDK extension so both clients call into one source of truth."
publish = false

[dependencies]
reqwest    = { version = "0.13", features = ["blocking", "json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
