[package]
name = "edgeflow-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "signal", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.9"
anyhow = { workspace = true }
bytemuck = "1"
