[package]
name = "edgeflow-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = ["rt", "signal", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.9"
anyhow = { workspace = true }
bytemuck = "1"
