[package]
name = "edgeflow-inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edgeflow-inference"
path = "src/main.rs"

[features]
default = ["ort-backend"]
ort-backend = ["dep:ort"]
tract-backend = ["dep:tract-onnx"]

[dependencies]
anyhow = "1"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
tract-onnx = { version = "0.21", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"
