[package]
name = "edgeflow-server"
version = "0.1.0"
edition = "2021"

[dependencies]
edgeflow-core = { path = "../edgeflow-core" }
edgeflow-store = { path = "../edgeflow-store" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
kube = { version = "0.97", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
