[package]
name = "edgeflow-k8s"
version = "0.1.0"
edition = "2021"

[dependencies]
edgeflow-core = { path = "../core" }
kube = { version = "0.97", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
