[package]
name = "edgeflow-k8s"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
edgeflow-core = { path = "../core" }
kube = { version = "0.97", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
