[package]
name = "edgeflow-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
edgeflow-core = { path = "../core" }
edgeflow-k8s  = { path = "../k8s" }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
