[package]
name = "edgeflow-store"
version = "0.1.0"
edition = "2021"

[dependencies]
edgeflow-core = { path = "../core" }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
