[package]
name = "edgeflow-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
edgeflow-config    = { path = "../config" }
opentelemetry      = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk  = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }
serde_json         = { workspace = true }
