[package]
name = "edgeflow-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
edgeflow-config    = { path = "../config" }
opentelemetry      = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk  = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }
serde_json         = { workspace = true }
