[workspace]

[package]
name = "edgeflow-transforms"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "_lib"

[features]
python = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.36"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
