[workspace]

[package]
name = "edgeflow-transforms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = "_lib"

[features]
python = ["dep:pyo3", "dep:pythonize", "dep:edgeflow-client", "dep:anyhow"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.36"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
pythonize = { version = "0.28", optional = true }
# Native-only HTTP client; pulled in only with the `python` feature so the
# wasm32-wasip2 build of this crate stays light.
edgeflow-client = { path = "../client", optional = true }
anyhow = { version = "1", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
