[project]
name = "edgeflow-example-iris-with-preprocessing"
version = "0.0.0"
description = "Edgeflow tutorial 02: iris with z-score preprocessing baked into a WASM pre-transform."
requires-python = ">=3.12"
dependencies = [
    "edgeflow",
    "mlflow",
    "numpy",
    "scikit-learn",
]

[tool.uv]
package = false
