[project]
name = "edgeflow-example-adult-income"
version = "0.0.0"
description = "Edgeflow tutorial 03: mixed categorical + numeric features, named-input mode."
requires-python = ">=3.12"
dependencies = [
    "edgeflow",
    "mlflow",
    "numpy",
    "scikit-learn",
    "xgboost",
]

# Optional alternative model libraries. Pick one with `uv sync --extra lightgbm`
# or `uv sync --extra catboost`; the script reads EDGEFLOW_MODEL_TYPE to choose.
[project.optional-dependencies]
lightgbm = ["lightgbm"]
catboost = ["catboost"]

[tool.uv]
package = false
