[project]
name = "edgeflow-e2e"
version = "0.0.0"
description = "End-to-end tests that exercise tutorial examples against a live edgeflow stack."
requires-python = ">=3.12"
dependencies = [
    "pytest>=8",
    "requests>=2.32",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
# -s disables output capture so docker compose build/up logs stream live.
# E2E runs are slow and silent capture makes them indistinguishable from hangs.
addopts = "-ra -s"
